--- a/lib/views/name.erb
+++ b/lib/views/name.erb
@@ -1,6 +1,1 @@
-<% user = User.create(:name => 'Casper')
-   user.save %>
-
-<% @namn1.each do | user | %>
-   <p><%= user.name %></p>
-<% end %>
+My name is <%= params[:name] %> 
