--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,4 +1,3 @@
-<% name = 'Zuzanna' %>
-  <h1>
-    <%= "#{name} is a student at Craft Academy" %>
-  </h1>
+<h1>
+  <%= @name %> is a student at Craft Academy
+</h1>
